go/envoy/sidecar-cm.yaml
apiVersion: v1
data:
  sidecar-config: |-
    admin:
      access_log_path: /tmp/admin_access.log
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }

    static_resources:
      listeners:
      - name: listener_0
        address:
          socket_address: { address: 0.0.0.0, port_value: 8080 }
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            config:
              stat_prefix: internal_http
              codec_type: AUTO
              route_config:
                name: local_route
                virtual_hosts:
                - name: local_service
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/" }
                    route: { cluster: go-svc2 }
              http_filters:
              - name: envoy.router

      clusters:
      - name: go-svc2
        connect_timeout: 25s
        type: "strict_dns"
        lb_policy: ROUND_ROBIN
        hosts: [{ socket_address: { address: "localhost", port_value: 8087 }}]
  
kind: ConfigMap
metadata:
  creationTimestamp: null
  name: sidecar-config
  selfLink: /api/v1/namespaces/test/configmaps/sidecar-config
